# simple-ocr-reader

./: .gitignore  Makefile  README.md  exceptions.py  main.py  output.text  output2.text  pyproject.toml  setup.cfg
ocr_processor/: __main__.py  file_operators.py  main.py  processor.py  processors.py  transfer.py  validations.py
tests/: test_main.py  test_processor.py  test_processors.py  test_transfer.py  test_validations.py
