[tool.poetry]
name = "simple-ocr-reader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyocr = "^0.7.2"
pdf2image = "^1.14.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
isort = "^5.6.4"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
